--- a/src/main/resources/templates/kapitalrechner.html
+++ b/src/main/resources/templates/kapitalrechner.html
@@ -2,32 +2,54 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Zinseszinsrechner</title>
+        <title>Kapitalrechner</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+              integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        <link rel="stylesheet" type="text/css" href="/css/style.css">
     </head>
-    <body>
 
-        <h1>Zinseszinsrechner</h1>
-        <form action="/submit" method="get" th:object="${kapitalForm}">
-            <label for="kapital">Anfangskapital</label>
-            <input type = "number" class="form-control" step="0.01" id = "kapital" th:field="*{kapital}" >
-            <small class="text-danger" th:if="${#fields.hasErrors('kapital')}" th:errors="*{kapital}">Kapital Error
-            </small>
-            <br><br>
-            <label for="laufzeitid">Laufzeit</label>
-            <input class="form-control" type ="number" step="0.01" id ="laufzeitid"  th:field= "*{laufzeit}" >
-            <small class="text-danger" th:if="${#fields.hasErrors('laufzeit')}" th:errors="*{laufzeit}">Laufzeit Error
-            </small>
-            <br><br>
-            <label for="zinssatzid">Zinssatz (% p.a.)</label>
-            <input class="form-control" type = "number" step="0.01"  id="zinssatzid" th:field= "*{zinssatz}">
-            <small class="text-danger" th:if="${#fields.hasErrors('zinssatz')}" th:errors="*{zinssatz}">zinssatz Error
-            </small>
+    <body class="parent container">
+
+        <h1 >Kapitalrechner</h1>
+
+        <div class="content">
+            <div class="formular">
+
+                <div class="formchild">
+                    <div class="form-check form-switch">
+                        <input class="form-check-input" type="checkbox" role="switch" id="zinseszins">
+                        <label class="form-check-label" for="zinseszins">Zinseszins</label>
+                    </div>
+                    <div class="form-check form-switch">
+                        <input class="form-check-input" type="checkbox" role="switch" id="jaehrlich">
+                        <label class="form-check-label" for="jaehrlich">Jährlicher Betrag</label>
+                    </div>
+                </div>
+
+                <form class="formchild" action="/submit" method="get" th:object="${kapitalForm}">
+                    <label for="kapital">Anfangskapital (in EUR)</label>
+                    <input type = "number" class="form-control" step="0.01" id = "kapital" th:field="*{kapital}" >
+                    <small class="text-danger" th:if="${#fields.hasErrors('kapital')}" th:errors="*{kapital}">Kapital Error
+                    </small>
+
+                    <label for="laufzeitid">Laufzeit (in Jahren)</label>
+                    <input class="form-control" type ="number" step="0.01" id ="laufzeitid"  th:field= "*{laufzeit}" >
+                    <small class="text-danger" th:if="${#fields.hasErrors('laufzeit')}" th:errors="*{laufzeit}">Laufzeit Error
+                    </small>
+
+                    <label for="zinssatzid">Zinssatz (% p.a.)</label>
+                    <input class="form-control" type = "number" step="0.01"  id="zinssatzid" th:field= "*{zinssatz}">
+                    <small class="text-danger" th:if="${#fields.hasErrors('zinssatz')}" th:errors="*{zinssatz}">zinssatz Error
+                    </small>
+
+                    <button type="submit">Berechnen</button>
+                </form>
+            </div>
             <br><br><br>
-            <button type="submit">Berechnen</button>
-        </form>
-        <br><br><br>
-        <p>Ihr Endkapital beträgt:</p>
-        <p th:text="${endkapital != null ? endkapital : '0'}">0</p>
+            <p>Ihr Endkapital beträgt: </p>
+            <p th:text="${endkapital != null ? endkapital : '0'}">0</p>
+
+        </div>
 
     </body>
 </html>
